# llm-cli

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  main.rs
src/cli/: helper.rs  mod.rs  repl.rs
src/llm/: gemini.rs  groq.rs  huggingface.rs  mod.rs  ollama.rs  openai_compatible.rs
